apps/code-server/code-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  namespace: code-server
spec:
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
        - name: code-server
          image: linuxserver/code-server:4.11.0
          volumeMounts:
            - name: code-server-mount
              mountPath: /config
          ports:
            - containerPort: 80
      volumes:
      - name: code-server-mount
        persistentVolumeClaim:
          claimName: code-server-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: code-server
spec:
  selector:
    app: code-server
  ports:
    - protocol: TCP
      port: 80
